--- a/components/dk6ar9kug-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/dk6ar9kug-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dk6ar9kug-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-7c3cef59e6.0jv5.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:2b86a427963d4fa7e606caf587653c95202e227a@sha256:095da0c6b960938437433cc9492fbfd42610bc93636e9d544eb819ef19777d6f
+          name: container-image
